# ai-news-daily

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.deployer  README.md  crontab.example  docker-compose.yml  fetcher.py  main.py  pyproject.toml  requirements.txt  run.sh  sources.py  summarizer.py
docker/: crontab  deploy-loop.sh  entrypoint.sh
src/ai_news/: __init__.py  __main__.py  cli.py  config.py  models.py  notify.py  pipeline.py  storage.py
src/ai_news/sources/: __init__.py  base.py  follow_builders.py  github_trending.py  hackernews.py  hf_papers.py  reddit.py  rss.py
src/ai_news/summarize/: __init__.py  prompt.py  providers.py
src/ai_news_daily.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_follow_builders.py  test_github_trending.py  test_models.py  test_notify.py
